test/conformance/chainsaw/verifyImages/clusterpolicy/standard/sigstore-attestation-verification-test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  containers:
  - image: ghcr.io/vishal-chdhry/artifact-attestation-example:artifact-attestation
    name: test-container
